yes its gonna be committed

--- a/site/firstpage.html
+++ b/site/firstpage.html
@@ -5,7 +5,11 @@
 </head>
 <body>
 <h1>hey its my first page</h1>
-<h2>coursera Project.</h2>
+<h2>coursera Project</h2>
 git push isnt working.
+also schecking sync 
+and some thing else too.<nl>
+
+nice1
 </body>
 </html>
